--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-lines-ellipsis": "^0.10.2",
     "react-scripts": "1.1.1"
   },
   "scripts": {
